# cpp_training_projects

./: .gitignore  cpp-proj.code-workspace
csv_reader/src/: Recipes_RAW_Test.csv  compilecommand.txt  dataframe.cpp  dataframe.h  openfile.cc  openfile_2.cc  read_csv.cpp  read_kaggle_dataset.cpp
csv_reader/src/fooddata/: dataframe.cpp  dataframe.h  datahelper.cpp  datahelper.h  recipe.cpp  recipe.h
csv_reader/src/notused/: read_csv.cpp
footballdnd5leage/development/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  footballdnd5leage
footballdnd5leage/development/src/: main.cpp
genAlgo/: README.md
genAlgo/src/: main.cpp
genAlgo/src/helpers/: Factory.cpp  Factory.h  IndividuumBlueprint.h  genData.h  miscFunc.cpp  miscFunc.h
hello_world/src/: .main.c.swp  main  main.cc
